[gd_scene load_steps=4 format=3 uid="uid://u1kt3tn8mi5t"]

[ext_resource type="Script" uid="uid://bbkiowusqvq4n" path="res://main_window/global_search_results/global_search_results.gd" id="1_v67t0"]
[ext_resource type="FontFile" uid="uid://bv1lbje08ni7s" path="res://theme/fonts/OpenSans-MediumItalic.ttf" id="2_j3lfx"]
[ext_resource type="Texture2D" uid="uid://fukk5darub1i" path="res://main_window/global_search_results/images/save_search.svg" id="2_oohpj"]

[node name="GlobalSearchResults" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumSeparation"
script = ExtResource("1_v67t0")

[node name="SaveSearch" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Save This Search"
icon = ExtResource("2_oohpj")

[node name="NoHitMessage" type="Label" parent="."]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_j3lfx")
text = "No matching to-dos found."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SearchResults" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MediumSeparation"
